// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchComponent should render default view 1`] = `
<div
  className="search-component undefined"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={true}
            hintText="Search eSpace"
            id="searchField"
            multiLine={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            rows={1}
            type="search"
            underlineShow={true}
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow search-button-wrapper"
    >
      <RaisedButton
        disabled={true}
        fullWidth={true}
        label="Search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</div>
`;

exports[`SearchComponent should render default view with advanced search 1`] = `
<div
  className="search-component undefined"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={true}
            hintText="Search eSpace"
            id="searchField"
            multiLine={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            rows={1}
            type="search"
            underlineShow={true}
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow search-button-wrapper"
    >
      <RaisedButton
        disabled={true}
        fullWidth={true}
        label="Search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
    <div
      className="column is-narrow"
    >
      <RaisedButton
        className="advancedButton"
        disabled={false}
        fullWidth={true}
        label="Advanced search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</div>
`;

exports[`SearchComponent should render with a class "header" for use in AppBar 1`] = `
<div
  className="search-component header"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={true}
            hintText="Search eSpace"
            id="searchField"
            multiLine={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            rows={1}
            type="search"
            underlineShow={true}
            underlineStyle={
              Object {
                "display": "none",
              }
            }
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow search-button-wrapper"
    >
      <RaisedButton
        disabled={true}
        fullWidth={true}
        label="Search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</div>
`;

exports[`SearchComponent should set search value from prop 1`] = `
<div
  className="search-component undefined"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={true}
            hintText="Search eSpace"
            id="searchField"
            multiLine={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            rows={1}
            type="search"
            underlineShow={true}
            value="i feel lucky"
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow search-button-wrapper"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
    <div
      className="column is-narrow"
    >
      <RaisedButton
        className="advancedButton"
        disabled={false}
        fullWidth={true}
        label="Advanced search"
        labelPosition="after"
        onClick={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</div>
`;
